src/objects/ACCL__Product__c.object
<CustomObject>
    <description>This object records the attributes of a product.</description>
    <fields>
        <fullName>ACCL__Asset_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to asset template.</description>
        <label>Asset Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Asset_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Asset_Template__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Category__c</fullName>
        <description>Product category.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Beverages</fullName>
                </value>
                <value>
                    <fullName>Chips</fullName>
                </value>
                <value>
                    <fullName>Detergent</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
                <value>
                    <fullName>Snacks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Competitive_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks a product as competitor&apos;s product.</description>
        <label>Competitor&apos;s Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Container_Size_Unit__c</fullName>
        <description>Describes the unit of Container Size.</description>
        <label>Container Size Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>oz</fullName>
                </value>
                <value>
                    <fullName>l</fullName>
                </value>
                <value>
                    <fullName>ml</fullName>
                </value>
                <value>
                    <fullName>gal</fullName>
                </value>
                <value>
                    <fullName>m³</fullName>
                </value>
                <value>
                    <fullName>lb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Container_Size__c</fullName>
        <description>Describes the numeric value for Container Size.</description>
        <label>Container Size</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_Discontinued_from_Scan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discontinued from Scan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Container_Type__c</fullName>
        <description>Describes the type of container of the product.</description>
        <label>Container Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Can</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Plastic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Criteria_Text_0__c</fullName>
        <description>Holds the Criteria in a text form.</description>
        <inlineHelpText>Improve loading performance of product for the filter criteria which  falls in non groupable filter category</inlineHelpText>
        <label>Criteria_Text_0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Criteria_Text_1__c</fullName>
        <description>Holds the Criteria in a text form.</description>
        <inlineHelpText>Improve loading performance of product for the filter criteria which  falls in non groupable filter category</inlineHelpText>
        <label>Criteria_Text_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Criteria_Text_2__c</fullName>
        <description>Holds the Criteria in a text form.</description>
        <inlineHelpText>Improve loading performance of product for the filter criteria which  falls in non groupable filter category</inlineHelpText>
        <label>Criteria_Text_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Criterion_1_Product_Code__c</fullName>
        <description>Product Code belonging to Criterion_1_Product.</description>
        <formula>ACCL__Criterion_1_Product__r.ACCL__Product_Code__c</formula>
        <label>Criterion 1 Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Criterion_1_Product_Description__c</fullName>
        <description>Product Description belonging to Criterion_1_Product.</description>
        <formula>ACCL__Criterion_1_Product__r.ACCL__Description_1__c</formula>
        <label>Criterion 1 Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Criterion_1_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product hierarchy related: Reference to product on Product_Level &apos;Category&apos;.</description>
        <inlineHelpText>Only product with &apos;Category&apos; product level can be selected</inlineHelpText>
        <label>Criterion 1 Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Product__c.ACCL__Product_Level__c</field>
                <operation>equals</operation>
                <value>Category</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Products (Criterion 1 Product)</relationshipLabel>
        <relationshipName>Products01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Criterion_2_Product_Code__c</fullName>
        <description>Product Code belonging to Criterion_2_Product.</description>
        <formula>ACCL__Criterion_2_Product__r.ACCL__Product_Code__c</formula>
        <label>Criterion 2 Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Criterion_2_Product_Description__c</fullName>
        <description>Product Description belonging to Criterion_2_Product.</description>
        <formula>ACCL__Criterion_2_Product__r.ACCL__Description_1__c</formula>
        <label>Criterion 2 Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Criterion_2_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product hierarchy related: Reference to product on Product_Level &apos;SubCategory&apos;.</description>
        <inlineHelpText>Only product with &apos;Sub Category&apos; product level can be selected</inlineHelpText>
        <label>Criterion 2 Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Product__c.ACCL__Product_Level__c</field>
                <operation>equals</operation>
                <value>SubCategory</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Products (Criterion 2 Product)</relationshipLabel>
        <relationshipName>Products02</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Criterion_3_Product_Code__c</fullName>
        <description>Product Code belonging to Criterion_3_Product.</description>
        <formula>ACCL__Criterion_3_Product__r.ACCL__Product_Code__c</formula>
        <label>Criterion 3 Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Criterion_3_Product_Description__c</fullName>
        <description>Product Description belonging to Criterion_3_Product.</description>
        <formula>ACCL__Criterion_3_Product__r.ACCL__Description_1__c</formula>
        <label>Criterion 3 Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Criterion_3_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product hierarchy related: Reference to product on Product_Level &apos;Brand&apos;.</description>
        <inlineHelpText>Only product with &apos;Brand&apos; product level can be selected</inlineHelpText>
        <label>Criterion 3 Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Product__c.ACCL__Product_Level__c</field>
                <operation>equals</operation>
                <value>Brand</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Products (Criterion 3 Product)</relationshipLabel>
        <relationshipName>Products03</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Custom_Sort__c</fullName>
        <description>Can be used to customize the sort order of products.</description>
        <inlineHelpText>Field reserved for sorting in product listings</inlineHelpText>
        <label>Custom Sort</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Valid_From__c</fullName>
        <description>Delivery status valid from date.</description>
        <label>Delivery Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Valid_Thru__c</fullName>
        <defaultValue>date(12,31,2099)</defaultValue>
        <description>Delivery status valid thru date.</description>
        <label>Delivery Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_1_Language_1__c</fullName>
        <description>Holds the first description of language 1.</description>
        <label>Description 1 Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_1_Language_2__c</fullName>
        <description>Holds the first description of language 2.</description>
        <label>Description 1 Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_1_Language_3__c</fullName>
        <description>Holds the first description of language 3.</description>
        <label>Description 1 Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_1__c</fullName>
        <description>Description 1 based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_1_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_1_Language_2__c,ACCL__Description_1_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_1_Language_3__c,ACCL__Description_1_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_1_Language_4__c,ACCL__Description_1_Language_1__c),
ACCL__Description_1_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_2__c</fullName>
        <description>Description 2 based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_2_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_2_Language_2__c,ACCL__Description_2_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_2_Language_3__c,ACCL__Description_2_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_2_Language_4__c,ACCL__Description_2_Language_1__c),
ACCL__Description_2_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Estimated_Value__c</fullName>
        <description>Holds the estimated value of the asset.</description>
        <label>Estimated Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Holds the unique external id.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Field_Valid_From__c</fullName>
        <description>Field status valid from date.</description>
        <label>Field Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Field_Valid_Thru__c</fullName>
        <defaultValue>date(12,31,2099)</defaultValue>
        <description>Field status valid thru date.</description>
        <label>Field Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Fund_Valid_From__c</fullName>
        <description>Fund Role status valid from date.</description>
        <label>Fund Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Fund_Valid_Thru__c</fullName>
        <description>Fund Role status valid thru date.</description>
        <label>Fund Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Height__c</fullName>
        <description>Holds the height of the asset.</description>
        <label>Height</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__KAM_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the specifies for a product on the lowest level of the product hierarchy, which is the corresponding product on planning level (Product Price Group level).</description>
        <label>KAM Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Products (KAM Product)</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__KAM_Valid_From__c</fullName>
        <description>KAM status valid from date.</description>
        <label>KAM Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__KAM_Valid_Thru__c</fullName>
        <defaultValue>date(12,31,2099)</defaultValue>
        <description>KAM status valid thru date.</description>
        <label>KAM Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Manufacturer_Item_Number__c</fullName>
        <description>Holds the number assigned to the manufacturer.</description>
        <label>Manufacturer Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Manufacturer__c</fullName>
        <description>Holds the name of the manufacturer.</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__New_Item_Valid_From__c</fullName>
        <description>New Item status valid from date.</description>
        <label>New Item Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__New_Item_Valid_Thru__c</fullName>
        <defaultValue>date(12,31,2099)</defaultValue>
        <description>New Item status valid thru date.</description>
        <label>New Item Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Ability__c</fullName>
        <description>This is a roll up summary field to identify the Order able products only. Order Able products are identified by the units of measure which have Order Ability set to true.</description>
        <label>Order Ability</label>
        <summaryFilterItems>
            <field>ACCL__Unit_of_Measure__c.ACCL__Order_Ability__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ACCL__Unit_of_Measure__c.ACCL__Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Pack_Size_Unit__c</fullName>
        <description>Describes the unit of the product pack size.</description>
        <label>Pack Size Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pk</fullName>
                </value>
                <value>
                    <fullName>box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Pack_Size__c</fullName>
        <description>Describes the numeric value for Product Pack Size.</description>
        <label>Pack Size</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Power_Supply_Connected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the asset requires connection to a power supply.</description>
        <label>Power Supply Connected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Product_Code__c</fullName>
        <description>Unique identification of a product.</description>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Product_Form__c</fullName>
        <description>Defines the state of the product.</description>
        <label>Product Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solid</fullName>
                </value>
                <value>
                    <fullName>Liquid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Product_Level__c</fullName>
        <description>Describes the Product Level.</description>
        <label>Product Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                    <label>Sub Category</label>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Flavor</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>PPG</fullName>
                </value>
                <value>
                    <fullName>Case Config</fullName>
                </value>
                <value>
                    <fullName>Main Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Product_Short_Code__c</fullName>
        <description>Additional short product identifier.</description>
        <label>Product Short Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_PPG__c</fullName>
        <description>Stores the planning PPG for product</description>
        <label>PPG</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_SubPPG__c</fullName>
        <description>Stores the sub PPG for product</description>
        <label>Sub PPG</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Product_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to product template.</description>
        <label>Product Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Product_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Product_Template__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Product_Type__c</fullName>
        <description>The type of the product.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>AssetType</fullName>
                </value>
                <value>
                    <fullName>CountingGroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Rounding_Rule_Validation__c</fullName>
        <description>Internally required.</description>
        <label>Rounding Rule Validation</label>
        <summarizedField>ACCL__Unit_of_Measure__c.ACCL__Sort__c</summarizedField>
        <summaryForeignKey>ACCL__Unit_of_Measure__c.ACCL__Product__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org which the product belongs to.</description>
        <formula>TEXT(ACCL__Product_Template__r.ACCL__Sales_Org__c)</formula>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description_Language_1__c</fullName>
        <description>Holds the short description of language 1.</description>
        <label>Short Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description_Language_2__c</fullName>
        <description>Holds the short description of language 2.</description>
        <label>Short Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description_Language_3__c</fullName>
        <description>Holds the short description of language 3.</description>
        <label>Short Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description__c</fullName>
        <description>Short description based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Short_Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Short_Description_Language_2__c,ACCL__Short_Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Short_Description_Language_3__c,ACCL__Short_Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Short_Description_Language_4__c,ACCL__Short_Description_Language_1__c),
ACCL__Short_Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Size__c</fullName>
        <description>Holds the size of the asset.</description>
        <label>Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__State__c</fullName>
        <description>State of the product.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Tax_Classification__c</fullName>
        <description>Tax classification of the product.</description>
        <label>Tax Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>n</fullName>
                </value>
                <value>
                    <fullName>r</fullName>
                </value>
                <value>
                    <fullName>f</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__UPC__c</fullName>
        <description>UPC number.</description>
        <label>GTIN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Weight__c</fullName>
        <description>Holds the weight of the asset.</description>
        <label>Weight</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLZ_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>ACCL__Products</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Product_Code__c</columns>
        <columns>ACCL__Description_1__c</columns>
        <columns>ACCL__Category__c</columns>
        <columns>ACCL__Criterion_4_Product__c</columns>
        <filterScope>Everything</filterScope>
		<filters>
            <field>ACCL__State__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>All Products</label>
    </listViews>
	 <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Product</fullName>
        <active>true</active>
        <description>This record type is for creating ACSF Products</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Product_Group</fullName>
        <active>true</active>
        <description>This record type is for creating ACSF Product Groups</description>
        <label>Product Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__AssetTemplate_Sales_Org_same_Product_Org</fullName>
        <active>true</active>
        <description>The Asset Template and the Product must have the same Sales Org.</description>
        <errorConditionFormula>AND(NOT(ISBLANK (ACCL__Asset_Template__c)),  
ACCL__Sales_Org__c != TEXT( ACCL__Asset_Template__r.ACCL__Sales_Org__c))</errorConditionFormula>
        <errorMessage>The Asset Template and the Product must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Asset_Type_must_have_Asset_Template</fullName>
        <active>true</active>
        <description>Asset Template can&apos;t be empty if the Product is an Asset Type.</description>
        <errorConditionFormula>ISPICKVAL(ACCL__Product_Type__c, &apos;AssetType&apos;)

      &amp;&amp;

      ISBLANK (ACCL__Asset_Template__c)</errorConditionFormula>
        <errorDisplayField>ACCL__Asset_Template__c</errorDisplayField>
        <errorMessage>Asset Template can&apos;t be empty if the Product is an Asset Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Avoid_Change_External_ID</fullName>
        <active>true</active>
        <description>ExternalId can&apos;t be edited if it has an existent value.</description>
        <errorConditionFormula>AND ( 
ISCHANGED(ACCL__ExternalId__c), 
NOT(ISBLANK(PRIORVALUE(ACCL__ExternalId__c))) 
)</errorConditionFormula>
        <errorDisplayField>ACCL__ExternalId__c</errorDisplayField>
        <errorMessage>ExternalId can&apos;t be edited if it has an existent value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Criterion_1_Product</fullName>
        <active>false</active>
        <description>Only products with &apos;Category&apos; Product Level can be selected.</description>
        <errorConditionFormula>NOT(ISBLANK(ACCL__Criterion_1_Product__c)) &amp;&amp; NOT(ISPICKVAL(ACCL__Criterion_1_Product__r.ACCL__Product_Level__c, &apos;Category&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Criterion_1_Product__c</errorDisplayField>
        <errorMessage>Only products with &apos;Category&apos; Product Level can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Criterion_2_Product</fullName>
        <active>false</active>
        <description>Only products with &apos;Sub Category&apos; Product Level can be selected.</description>
        <errorConditionFormula>NOT(ISBLANK(ACCL__Criterion_2_Product__c)) &amp;&amp; NOT(ISPICKVAL(ACCL__Criterion_2_Product__r.ACCL__Product_Level__c, &apos;SubCategory&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Criterion_2_Product__c</errorDisplayField>
        <errorMessage>Only products with &apos;Sub Category&apos; Product Level can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Criterion_3_Product</fullName>
        <active>false</active>
        <description>Only products with &apos;Brand&apos; Product Level can be selected.</description>
        <errorConditionFormula>NOT(ISBLANK(ACCL__Criterion_3_Product__c)) &amp;&amp; NOT(ISPICKVAL(ACCL__Criterion_3_Product__r.ACCL__Product_Level__c, &apos;Brand&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Criterion_3_Product__c</errorDisplayField>
        <errorMessage>Only products with &apos;Brand&apos; Product Level can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Criterion_4_Product</fullName>
        <active>false</active>
        <description>Only products with &apos;Package&apos; Product Level can be selected.</description>
        <errorConditionFormula>NOT(ISBLANK(ACCL__Criterion_4_Product__c)) &amp;&amp; NOT(ISPICKVAL(ACCL__Criterion_4_Product__r.ACCL__Product_Level__c, &apos;Flavor&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Criterion_4_Product__c</errorDisplayField>
        <errorMessage>Only products with &apos;Flavor&apos; Product Level can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Criterion_5_Product</fullName>
        <active>false</active>
        <description>Only products with &apos;Product&apos; Product Level can be selected.</description>
        <errorConditionFormula>NOT(ISBLANK(ACCL__Criterion_5_Product__c)) &amp;&amp; NOT(ISPICKVAL(ACCL__Criterion_5_Product__r.ACCL__Product_Level__c, &apos;Package&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Criterion_5_Product__c</errorDisplayField>
        <errorMessage>Only products with &apos;Package&apos; Product Level can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Criterion_6_Product</fullName>
        <active>true</active>
        <description>Only product with &apos;Product&apos; product level can be selected</description>
        <errorConditionFormula>NOT(ISBLANK(ACCL__Criterion_6_Product__c)) &amp;&amp; NOT(ISPICKVAL(ACCL__Criterion_6_Product__r.ACCL__Product_Level__c, &apos;Product&apos;))</errorConditionFormula>
        <errorDisplayField>ACCL__Criterion_6_Product__c</errorDisplayField>
        <errorMessage>Only products with &apos;Product&apos; Product Level can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Prevent_Product_Template_Change</fullName>
        <active>true</active>
        <description>The Product Template can&apos;t be edited after Product creation.</description>
        <errorConditionFormula>ISCHANGED( ACCL__Product_Template__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Product_Template__c</errorDisplayField>
        <errorMessage>The Product Template can&apos;t be edited after Product creation.</errorMessage>
    </validationRules>
</CustomObject>